# devkit

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.claude/: settings.local.json
.test/: Dockerfile.ubuntu-aarch64  Dockerfile.ubuntu-x86_64  README.md  run-basic-tests.sh  run-tests.sh  test-basic.sh  test-setup.sh
crates/dev/: Cargo.toml
crates/dev/src/: config.rs  dockergen.rs  envfile.rs  gitops.rs  logging.rs  main.rs  review.rs
crates/dev/src/scaffold/: python.rs  rust.rs
crates/dev/src/setup/: component.rs  context.rs  cuda.rs  docker.rs  mod.rs  system.rs  tools.rs
crates/dev/templates/docker/: Dockerfile.core  docker-compose.yml
crates/dev/templates/python/: mypy.ini  pre-commit-config.yaml  ruff.toml
crates/dev/templates/python/.github/workflows/: ci.yml
crates/dev/templates/typescript/: tsconfig.json
crates/dev/templates/typescript/.github/workflows/: ci.yml
crates/devkey/: Cargo.toml
crates/devkey/src/: env.rs  focus.rs  hotkey.rs  inject.rs  main.rs  menu.rs  window.rs
docs/: USAGE.md  example.config.toml  spec.md
scripts/: nvidia-container.sh
src/: cli.rs  config.rs  dockergen.rs  envfile.rs  gitops.rs  logging.rs  main.rs  runner.rs  tasks.rs  templates.rs  util.rs  versioning.rs  walk.rs
src/scaffold/: mod.rs  python.rs  rust.rs  typescript.rs
src/setup/: templates.rs
templates/config/: example.config.toml
templates/rust/: deny.toml
templates/services/: docker-compose.yml
templates/typescript/: eslint.config.ts
