[package]
name = "devkit-cli"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "A developer workflow CLI for managing tasks, configs, and project scaffolding"
repository = "https://github.com/bakobiibizo/devkit"
keywords = ["cli", "developer-tools", "workflow", "tasks"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "dev"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
camino = "1.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
rust-embed = "8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"
dirs = "5.0"
semver = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[package.metadata.cargo-udeps.ignore]
dependencies = ["chrono", "regex", "serde_json"]
